--- a/othersongs.html
+++ b/othersongs.html
@@ -21,9 +21,8 @@
             <br><h3>As <i><a href="KaunKarne.html">Kaun Karne</a></i></h3>
             <br><h3>As <i><a href="Irfan.html">Irfan</a></i></h3>
             <br><h3>As <i><a href="Sowrmango.html">Sowrmango</a></i></h3>
-            <br><h3><a href="WKDemos.html">Demos</a></h3>
 
-            <br><a href="chron.html">CHRON</a>
+            <br><a href="chron.html">CHRON / DEMOS</a>
           </p>
 
 
