Added Bunches of songs

--- a/chron.html
+++ b/chron.html
@@ -16,7 +16,7 @@
     <h1><i>Chron</i></h1>
         <br>
          <p><strong><h5>a <mark>chronological</mark> collection of every audio file on this website,</h5>
-            includes everything else as well as things that fell between the cracks
+            the difference between this page and the others is that the others only catalog released songs.
             <br>
     <br><h3>Discdawgraphy</h3><br>
              <h4 style="color:orange;">2025</h>
@@ -40,34 +40,57 @@
              <h4 style="color:orange;">2023</h>
             <p>
                 <h5>05.26.23 <a href="music/Forest/052623.mp3" blank >Forest</a></h5>
+                <h5>05.03.23 <a href="music/A Cruel Angel's Thesis/050323.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >cover</a>]</h5>
+
+
             </p>
-     <br>
+     
+            
+            <br>
              <h4 style="color:orange;">2022</h>
-            <p>
+            <p> 
 
 
 
 
-
+                <h5>12.04.22 <a href="music/A Cruel Angel's Thesis/120422.mp3">A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >cover</a>]</h5>
 
                 <h5>10.26.22 <a href="music/Hel/102622.mp3">Hel</a></h5>
+                <h5>10.21.22 <a href="music/Anywhere/102122.mp3">Anywhere</a></h5>
+                <h5>10.11.22 <a href="music/BBBBBBB/111122.mp3">BBBBBBB</a></h5>
                 <h5>10.07.22 <a href="music/Whistle/100722.mp3">Whistle</a></h5>
                 <h5>10.05.22 <a href="music/Whistle/100522.mp3">Whistle</a></h5>
                 <h5>10.01.22 <a href="music/Here/100122.mp3">Here</a></h5>
                 <h5>09.19.22 <a href="music/Respect The Elders/091922.mp3">Respect The Elders</a></h5>
+                <h5>09.18.22 <a href="music/B/091822.mp3">B</a></h5>
+                <h5>09.16.22 <a href="music/Autumn/091622.mp3">Autumn</a></h5>
+                <h5>09.15.22 <a href="music/Autumn/091522.mp3">Autumn</a></h5>
                 <h5>09.10.22 <a href="music/All For/091022.mp3">All For</a></h5>
+                <h5>09.10.22 <a href="music/Free/091022.mp3">Free</a></h5>
                 <h5>09.04.22 <a href="music/Free/090422.mp3">Free</a></h5>
+                <h5>09.04.22 <a href="music/Low Batteries Are Better/090422.mp3">Low Batteries Are Better</a></h5>
                 <h5>09.03.22 <a href="music/Free/090322.mp3">Free</a></h5>
+                <h5>08.22.22 <a href="music/Life/082222.mp3">Life</a></h5>
+                <h5>08.20.22 <a href="music/Low Batteries Are Better/082022.mp3">Low Batteries Are Better</a></h5>
                 <h5>08.12.22 <a href="music/Desk/081222.mp3">Desk</a></h5>
+                <h5>08.11.22 <a href="music/B2nes/081122.mp3">B2nes</a></h5>
                 <h5>08.08.22 <a href="music/Jazzy/080822.mp3">Jazzy</a></h5>
+                <h5>08.07.22 <a href="music/Awesome Song/080722.mp3">Awesome Songs</a></h5>
                 <h5>07.24.22 <a href="music/Endig/072422.mp3">Endig</a></h5>
                 <h5>07.23.22 <a href="music/Fishy/072322 3.mp3">Fishy [B-Section]</a></h5>
                 <h5>07.23.22 <a href="music/Fishy/072322 2.mp3">Fishy [leadless]</a></h5>
                 <h5>07.23.22 <a href="music/Fishy/072322.mp3">Fishy</a></h5>
                 <h5>07.22.22 <a href="music/Crash/072222.mp3">Crash</a></h5>
                 <h5>07.22.22 <a href="music/Eric The Fish/072222.mp3">Eric The Fish</a></h5>
+                <h5>07.20.22 <a href="music/Ruler Of Everything/072022.mp3">Ruler Of Everything</a> [<a href="https://genius.com/Tally-hall-ruler-of-everything-lyrics" blank >cover</a>]</h5>
                 <h5>07.18.22 <a href="music/Hampy/071822.mp3">Hampy</a></h5>
                 <h5>05.21.22 <a href="music/Groovier/052122.mp3">Groovier </a> [<a href="https://genius.com/Dilated-peoples-worst-comes-to-worst-lyrics" blank >cover</a>]</h5>
+                <h5>03.12.22 <a href="music/Death/031222.mp3">Death </a> </h5>
+                this is my favorite thing I've written
+                <h5>03.06.22 <a href="music/93 Til Infinity/030622.mp3">93 Til Infinity </a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >cover</a>]</h5>
+
+
+
 
             </p>
 
@@ -85,7 +108,11 @@
              <h4 style="color:orange;">2020</h>
             <p>
              <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">cover</a>]</h5>
+             <h5>08.09.20 <a href="music/Ants/080920.mp3">Ants! [beepbox]</a></h5>
              <h5>7.19.20 <a href="music/Important/071920.wav">Important</a></h5>
+             <h5>05.18.20 <a href="music/Ants/051820.mp3">Ants!</a></h5>
+
+
             </p>
 
         <br>
@@ -108,6 +135,7 @@
              <h5>5.26.18 <a href="music/Old Stereo/052618.wav">Old Stereo</a></h5>
              <h5>5.26.18 <a href="music/Orchid By The Window/052618.wav">Orchid By The Windows</a></h5>
              <h5>4.2.18 <a href="music/Phantasmagoreium/040218.wav">Phantasmagoreium</a></h5>
+             this is the first song I ever recorded
             </p>
 
 
