--- a/chron.html
+++ b/chron.html
@@ -54,28 +54,43 @@
 
 
                 <h5>12.04.22 <a href="music/A Cruel Angel's Thesis/120422.mp3">A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >cover</a>]</h5>
-
+                <h5>11.27.22 <a href="music/Christmas Song/112722.mp3">Christmas Song</a></h5>
+                <h5>11.24.22 <a href="music/Christmas Song/112422.mp3">Chorus Chords</a></h5>
+                <h5>11.20.22 <a href="music/Carnival/112022.mp3">Carnival</a></h5>
+                <h5>11.19.22 <a href="music/KAIT/111922.mp3">K.A.I.T</a></h5>
+                <h5>11.11.22 <a href="music/Anywhere/111122.mp3">Anywhere</a></h5>
+                <h5>11.11.22 <a href="music/BBBBBBB/111122.mp3">BBBBBBB</a></h5>
                 <h5>10.26.22 <a href="music/Hel/102622.mp3">Hel</a></h5>
+                <h5>10.22.22 <a href="music/Anywhere/102222.mp3">Anywhere</a></h5>
                 <h5>10.21.22 <a href="music/Anywhere/102122.mp3">Anywhere</a></h5>
-                <h5>10.11.22 <a href="music/BBBBBBB/111122.mp3">BBBBBBB</a></h5>
                 <h5>10.07.22 <a href="music/Whistle/100722.mp3">Whistle</a></h5>
                 <h5>10.05.22 <a href="music/Whistle/100522.mp3">Whistle</a></h5>
                 <h5>10.01.22 <a href="music/Here/100122.mp3">Here</a></h5>
+                <h5>09.20.22 <a href="music/Chaz/092022.mp3">Chaz</a></h5>
                 <h5>09.19.22 <a href="music/Respect The Elders/091922.mp3">Respect The Elders</a></h5>
                 <h5>09.18.22 <a href="music/B/091822.mp3">B</a></h5>
                 <h5>09.16.22 <a href="music/Autumn/091622.mp3">Autumn</a></h5>
                 <h5>09.15.22 <a href="music/Autumn/091522.mp3">Autumn</a></h5>
+                <h5>09.13.22 <a href="music/Bruh/091322.mp3">Bruh</a></h5>
                 <h5>09.10.22 <a href="music/All For/091022.mp3">All For</a></h5>
                 <h5>09.10.22 <a href="music/Free/091022.mp3">Free</a></h5>
-                <h5>09.04.22 <a href="music/Free/090422.mp3">Free</a></h5>
+                <h5>09.05.22 <a href="music/Jazz/090522.mp3">Jazz</a></h5>
+                  <h5>09.04.22 <a href="music/Free/090422.mp3">Free</a></h5>
                 <h5>09.04.22 <a href="music/Low Batteries Are Better/090422.mp3">Low Batteries Are Better</a></h5>
                 <h5>09.03.22 <a href="music/Free/090322.mp3">Free</a></h5>
+                <h5>08.23.22 <a href="music/KAIT/082322.mp3">K.A.I.T</a></h5>
                 <h5>08.22.22 <a href="music/Life/082222.mp3">Life</a></h5>
                 <h5>08.20.22 <a href="music/Low Batteries Are Better/082022.mp3">Low Batteries Are Better</a></h5>
+                <h5>08.14.22 <a href="music/KAIT/081422.mp3">K.A.I.T</a></h5>
                 <h5>08.12.22 <a href="music/Desk/081222.mp3">Desk</a></h5>
                 <h5>08.11.22 <a href="music/B2nes/081122.mp3">B2nes</a></h5>
+                <h5>08.08.22 <a href="music/Jazzy/080822 2.mp3">Jazzy</a></h5>
                 <h5>08.08.22 <a href="music/Jazzy/080822.mp3">Jazzy</a></h5>
+                <h5>08.07.22 <a href="music/Carnival/080722.mp3">Carnival</a></h5>
                 <h5>08.07.22 <a href="music/Awesome Song/080722.mp3">Awesome Songs</a></h5>
+                <h5>07.29.22 <a href="music/Run/072922.mp3">Run</a></h5>
+                <h5>07.27.22 <a href="music/Free/072722.mp3">Free</a></h5>
+                <h5>07.24.22 <a href="music/Donkey Kong Type Beat/072422.mp3">Donkey Kong Type Beat</a></h5>
                 <h5>07.24.22 <a href="music/Endig/072422.mp3">Endig</a></h5>
                 <h5>07.23.22 <a href="music/Fishy/072322 3.mp3">Fishy [B-Section]</a></h5>
                 <h5>07.23.22 <a href="music/Fishy/072322 2.mp3">Fishy [leadless]</a></h5>
@@ -83,8 +98,14 @@
                 <h5>07.22.22 <a href="music/Crash/072222.mp3">Crash</a></h5>
                 <h5>07.22.22 <a href="music/Eric The Fish/072222.mp3">Eric The Fish</a></h5>
                 <h5>07.20.22 <a href="music/Ruler Of Everything/072022.mp3">Ruler Of Everything</a> [<a href="https://genius.com/Tally-hall-ruler-of-everything-lyrics" blank >cover</a>]</h5>
+                <h5>07.19.22 <a href="music/Coffin Nails/071922.mp3">Coffin Nails</a> [<a href="https://genius.com/Mf-doom-coffin-nails-lyrics" blank >cover</a>]</h5>
                 <h5>07.18.22 <a href="music/Hampy/071822.mp3">Hampy</a></h5>
+                <h5>06.22.22 <a href="music/Bruhm/062222.mp3">Bruhm </a> </h5>
+                <h5>06.26.22 <a href="music/F2ght/062622.mp3">F2ght </a> </h5>
+                <h5>06.19.22 <a href="music/The Motor Booty Affair/061922.mp3">The Motor-Booty Affair </a> [<a href="https://genius.com/Parliament-the-motor-booty-affair-lyrics" blank >cover</a>]</h5>
+                <h5>05.21.22 <a href="music/Jazze/052122.mp3">Jazze </a> </h5>
                 <h5>05.21.22 <a href="music/Groovier/052122.mp3">Groovier </a> [<a href="https://genius.com/Dilated-peoples-worst-comes-to-worst-lyrics" blank >cover</a>]</h5>
+                <h5>05.10.22 <a href="music/B2nes/051022.mp3">B2nes </a></h5>
                 <h5>03.12.22 <a href="music/Death/031222.mp3">Death </a> </h5>
                 this is my favorite thing I've written
                 <h5>03.06.22 <a href="music/93 Til Infinity/030622.mp3">93 Til Infinity </a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >cover</a>]</h5>
@@ -100,16 +121,26 @@
             <p>
                 <h5>05.08.21 <a href="music/Respect The Elders/050821.mp3">Respect The Elders</a></h5>
                 <h5>05.08.21 <a href="music/F2ght/050821.mp3">F2ght</a></h5>
+                <h5>04.05.21 <a href="music/Cave Song/040521.mp3">Cave Song</a></h5>
                 <h5>3.27.21 <a href="music/My Song 156/032721.wav">My Song 156</a></h5>
                 <h5>3.27.21 <a href="music/07/032721.wav">07</a></h5>
+
+
+                <h5>01.28.21 <a href="music/Come And Get Your Love/012821.mp3">Come And Get Your Love</a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >cover</a>]</h5>
             </p>
 
         <br>
              <h4 style="color:orange;">2020</h>
             <p>
+             <h5>12.1.20 <a href="music/Run/120120.mp3">Run</a> 
+             <h5>12.1.20 <a href="music/Cool One/120120.mp3">Cool One</a> 
              <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">cover</a>]</h5>
+             <h5>08.09.20 <a href="music/V2/080920.mp3">V2</a></h5>
              <h5>08.09.20 <a href="music/Ants/080920.mp3">Ants! [beepbox]</a></h5>
              <h5>7.19.20 <a href="music/Important/071920.wav">Important</a></h5>
+             <h5>06.14.20 <a href="music/Rats/061420.mp3">Rats</a></h5>
+             <h5>06.05.20 <a href="music/Multiple Choice Quiz/060520.mp3">Multiple Choice Quiz</a></h5>
+             <h5>06.05.20 <a href="music/Untitled/060520.mp3">Untitled</a></h5>
              <h5>05.18.20 <a href="music/Ants/051820.mp3">Ants!</a></h5>
 
 
