--- a/siteNotes.html
+++ b/siteNotes.html
@@ -26,6 +26,8 @@
        <p>
          <mark>6.8.25</mark><br>
          created da site<br>
+        <mark>6.9.25</mark><br>
+         on github now<br>
        </p>
     </details>
 
