--- a/chron.html
+++ b/chron.html
@@ -17,6 +17,7 @@
         <br>
          <p><strong><h5>a <mark>chronological</mark> collection of every audio file on this website,</h5>
             the difference between this page and the others is that the others only catalog released songs.
+            <br><mark>Progress:</mark> ~50% of all songs
             <br>
     <br><h3>Discdawgraphy</h3><br>
              <h4 style="color:orange;">2025</h>
@@ -39,8 +40,9 @@
       <br>
              <h4 style="color:orange;">2023</h>
             <p>
+                <h5>05.27.23 <a href="music/Nitwit/052723.mp3" blank >Nitwit</a></h5>
                 <h5>05.26.23 <a href="music/Forest/052623.mp3" blank >Forest</a></h5>
-                <h5>05.03.23 <a href="music/A Cruel Angel's Thesis/050323.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >cover</a>]</h5>
+                <h5>05.03.23 <a href="music/A Cruel Angel's Thesis/050323.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
 
 
             </p>
@@ -53,11 +55,14 @@
 
 
 
-                <h5>12.04.22 <a href="music/A Cruel Angel's Thesis/120422.mp3">A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >cover</a>]</h5>
+                <h5>12.04.22 <a href="music/A Cruel Angel's Thesis/120422.mp3">A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
                 <h5>11.27.22 <a href="music/Christmas Song/112722.mp3">Christmas Song</a></h5>
                 <h5>11.24.22 <a href="music/Christmas Song/112422.mp3">Chorus Chords</a></h5>
                 <h5>11.20.22 <a href="music/Carnival/112022.mp3">Carnival</a></h5>
+                <h5>11.20.22 <a href="music/Ocean/112022.mp3">Ocean</a></h5>
+                <h5>11.19.22 <a href="music/Ocean/111922.mp3">Ocean</a></h5>
                 <h5>11.19.22 <a href="music/KAIT/111922.mp3">K.A.I.T</a></h5>
+                <h5>11.14.22 <a href="music/No/111422.mp3">No</a></h5>
                 <h5>11.11.22 <a href="music/Anywhere/111122.mp3">Anywhere</a></h5>
                 <h5>11.11.22 <a href="music/BBBBBBB/111122.mp3">BBBBBBB</a></h5>
                 <h5>10.26.22 <a href="music/Hel/102622.mp3">Hel</a></h5>
@@ -65,22 +70,34 @@
                 <h5>10.21.22 <a href="music/Anywhere/102122.mp3">Anywhere</a></h5>
                 <h5>10.07.22 <a href="music/Whistle/100722.mp3">Whistle</a></h5>
                 <h5>10.05.22 <a href="music/Whistle/100522.mp3">Whistle</a></h5>
+                <h5>10.05.22 <a href="music/Whistle/100522 demo.mp3">Whistle [but worse]</a></h5>
+                <h5>10.02.22 <a href="music/No/100222.mp3">No</a></h5>
                 <h5>10.01.22 <a href="music/Here/100122.mp3">Here</a></h5>
+                <h5>09.20.22 <a href="music/All Two/092022.mp3">Chaz</a></h5>
                 <h5>09.20.22 <a href="music/Chaz/092022.mp3">Chaz</a></h5>
                 <h5>09.19.22 <a href="music/Respect The Elders/091922.mp3">Respect The Elders</a></h5>
                 <h5>09.18.22 <a href="music/B/091822.mp3">B</a></h5>
+                <h5>09.17.22 <a href="music/Ow/091722.mp3">Ow</a></h5>
                 <h5>09.16.22 <a href="music/Autumn/091622.mp3">Autumn</a></h5>
                 <h5>09.15.22 <a href="music/Autumn/091522.mp3">Autumn</a></h5>
                 <h5>09.13.22 <a href="music/Bruh/091322.mp3">Bruh</a></h5>
+                <h5>09.11.22 <a href="music/Lmao/091122.mp3">Lmao</a></h5>
+                <h5>09.10.22 <a href="music/All Two/091022.mp3">Chaz</a></h5>
                 <h5>09.10.22 <a href="music/All For/091022.mp3">All For</a></h5>
                 <h5>09.10.22 <a href="music/Free/091022.mp3">Free</a></h5>
                 <h5>09.05.22 <a href="music/Jazz/090522.mp3">Jazz</a></h5>
                   <h5>09.04.22 <a href="music/Free/090422.mp3">Free</a></h5>
                 <h5>09.04.22 <a href="music/Low Batteries Are Better/090422.mp3">Low Batteries Are Better</a></h5>
                 <h5>09.03.22 <a href="music/Free/090322.mp3">Free</a></h5>
+                <h5>??.??.22 <a href="music/All For/date unknown.mp3">All For</a></h5>
+                <h5>08.26.22 <a href="music/All For/082622.mp3">All For</a></h5>
+                <h5>08.24.22 <a href="music/All For/082422.mp3">All For</a></h5>
+                <h5>08.24.22 <a href="music/Menu/082422.mp3">Menu</a></h5>
+                <h5>08.23.22 <a href="music/All For/082322.mp3">All For</a></h5>
                 <h5>08.23.22 <a href="music/KAIT/082322.mp3">K.A.I.T</a></h5>
                 <h5>08.22.22 <a href="music/Life/082222.mp3">Life</a></h5>
                 <h5>08.20.22 <a href="music/Low Batteries Are Better/082022.mp3">Low Batteries Are Better</a></h5>
+                <h5>08.19.22 <a href="music/Low Batteries Are Better/081922.mp3">Low Batteries Are Better</a></h5>
                 <h5>08.14.22 <a href="music/KAIT/081422.mp3">K.A.I.T</a></h5>
                 <h5>08.12.22 <a href="music/Desk/081222.mp3">Desk</a></h5>
                 <h5>08.11.22 <a href="music/B2nes/081122.mp3">B2nes</a></h5>
@@ -97,19 +114,22 @@
                 <h5>07.23.22 <a href="music/Fishy/072322.mp3">Fishy</a></h5>
                 <h5>07.22.22 <a href="music/Crash/072222.mp3">Crash</a></h5>
                 <h5>07.22.22 <a href="music/Eric The Fish/072222.mp3">Eric The Fish</a></h5>
-                <h5>07.20.22 <a href="music/Ruler Of Everything/072022.mp3">Ruler Of Everything</a> [<a href="https://genius.com/Tally-hall-ruler-of-everything-lyrics" blank >cover</a>]</h5>
-                <h5>07.19.22 <a href="music/Coffin Nails/071922.mp3">Coffin Nails</a> [<a href="https://genius.com/Mf-doom-coffin-nails-lyrics" blank >cover</a>]</h5>
+                <h5>07.20.22 <a href="music/The End/072022.mp3">The End</a> </h5>
+                <h5>07.20.22 <a href="music/Ruler Of Everything/072022.mp3">Ruler Of Everything</a> [<a href="https://genius.com/Tally-hall-ruler-of-everything-lyrics" blank >Tally Hall</a>]</h5>
+                <h5>07.19.22 <a href="music/Coffin Nails/071922.mp3">Coffin Nails</a> [<a href="https://genius.com/Mf-doom-coffin-nails-lyrics" blank >MF DOOM</a>]</h5>
                 <h5>07.18.22 <a href="music/Hampy/071822.mp3">Hampy</a></h5>
                 <h5>06.22.22 <a href="music/Bruhm/062222.mp3">Bruhm </a> </h5>
                 <h5>06.26.22 <a href="music/F2ght/062622.mp3">F2ght </a> </h5>
-                <h5>06.19.22 <a href="music/The Motor Booty Affair/061922.mp3">The Motor-Booty Affair </a> [<a href="https://genius.com/Parliament-the-motor-booty-affair-lyrics" blank >cover</a>]</h5>
+                <h5>06.19.22 <a href="music/The Motor Booty Affair/061922.mp3">The Motor-Booty Affair </a> [<a href="https://genius.com/Parliament-the-motor-booty-affair-lyrics" blank >Parliament-Funkadelic</a>]</h5>
+                the world is not ready to discuss how underappreciated this song is
+                <h5>05.24.22 <a href="music/Menuselect/052422.mp3">Menuselect </a> </h5>
                 <h5>05.21.22 <a href="music/Jazze/052122.mp3">Jazze </a> </h5>
-                <h5>05.21.22 <a href="music/Groovier/052122.mp3">Groovier </a> [<a href="https://genius.com/Dilated-peoples-worst-comes-to-worst-lyrics" blank >cover</a>]</h5>
+                <h5>05.21.22 <a href="music/Groovier/052122.mp3">Groovier </a> [<a href="https://genius.com/Dilated-peoples-worst-comes-to-worst-lyrics" blank >Dialated Peoples</a>]</h5>
                 <h5>05.10.22 <a href="music/B2nes/051022.mp3">B2nes </a></h5>
                 <h5>03.12.22 <a href="music/Death/031222.mp3">Death </a> </h5>
                 this is my favorite thing I've written
-                <h5>03.06.22 <a href="music/93 Til Infinity/030622.mp3">93 Til Infinity </a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >cover</a>]</h5>
-
+                <h5>03.06.22 <a href="music/93 Til Infinity/030622.mp3">93 Til Infinity </a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >Souls of Mischief</a>]</h5>
+                <h5>02.25.22 <a href="music/Death/022522.mp3">Death </a> </h5>
 
 
 
@@ -126,24 +146,29 @@
                 <h5>3.27.21 <a href="music/07/032721.wav">07</a></h5>
 
 
-                <h5>01.28.21 <a href="music/Come And Get Your Love/012821.mp3">Come And Get Your Love</a> [<a href="https://genius.com/Souls-of-mischief-93-til-infinity-lyrics" blank >cover</a>]</h5>
+                <h5>01.28.21 <a href="music/Come And Get Your Love/012821.mp3">Come And Get Your Love</a> [<a href="https://genius.com/Redbone-come-and-get-your-love-lyrics" blank >Redbone</a>]</h5>
             </p>
 
         <br>
              <h4 style="color:orange;">2020</h>
             <p>
+             <h5>12.28.20 <a href="music/Love And Happiness/122820.mp3">Love And Happiness</a> [<a href="https://genius.com/Al-green-love-and-happiness-lyrics">Al Green</a>]</h5>
              <h5>12.1.20 <a href="music/Run/120120.mp3">Run</a> 
              <h5>12.1.20 <a href="music/Cool One/120120.mp3">Cool One</a> 
-             <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">cover</a>]</h5>
+             <h5>11.23.20 <a href="music/Ma And Pa/112320.mp3">Ma And Pa</a> [<a href="https://genius.com/Fishbone-ma-and-pa-lyrics">Fishbone</a>]</h5>
+             <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">Bootsy Collins</a>]</h5>
+             <h5>08.11.20 <a href="music/Natural Mystic/081120.mp3">Natural Mystic</a> [<a href="https://genius.com/Bob-marley-and-the-wailers-natural-mystic-lyrics">Bob Marley</a>]</h5>
              <h5>08.09.20 <a href="music/V2/080920.mp3">V2</a></h5>
              <h5>08.09.20 <a href="music/Ants/080920.mp3">Ants! [beepbox]</a></h5>
              <h5>7.19.20 <a href="music/Important/071920.wav">Important</a></h5>
              <h5>06.14.20 <a href="music/Rats/061420.mp3">Rats</a></h5>
              <h5>06.05.20 <a href="music/Multiple Choice Quiz/060520.mp3">Multiple Choice Quiz</a></h5>
              <h5>06.05.20 <a href="music/Untitled/060520.mp3">Untitled</a></h5>
+             <h5>05.18.20 <a href="music/Rats/051820.mp3">Rats!</a></h5>
              <h5>05.18.20 <a href="music/Ants/051820.mp3">Ants!</a></h5>
-
-
+             <h5>05.06.20 <a href="music/V2/050620 2.mp3">V2</a></h5>
+             this is where i discover beepbox [canon event]
+             <h5>05.06.20 <a href="music/V2/050620.mp3">V2</a></h5>
             </p>
 
         <br>
