added sir duke lol

--- a/chron.html
+++ b/chron.html
@@ -72,6 +72,7 @@
                 <h5>10.05.22 <a href="music/Whistle/100522.mp3">Whistle</a></h5>
                 <h5>10.05.22 <a href="music/Whistle/100522 demo.mp3">Whistle [but worse]</a></h5>
                 <h5>10.02.22 <a href="music/No/100222.mp3">No</a></h5>
+                <h5>10.01.22 <a href="music/Shit/100122.mp3">Shit</a></h5>
                 <h5>10.01.22 <a href="music/Here/100122.mp3">Here</a></h5>
                 <h5>09.20.22 <a href="music/All Two/092022.mp3">Chaz</a></h5>
                 <h5>09.20.22 <a href="music/Chaz/092022.mp3">Chaz</a></h5>
@@ -155,6 +156,7 @@
              <h5>12.28.20 <a href="music/Love And Happiness/122820.mp3">Love And Happiness</a> [<a href="https://genius.com/Al-green-love-and-happiness-lyrics">Al Green</a>]</h5>
              <h5>12.1.20 <a href="music/Run/120120.mp3">Run</a> 
              <h5>12.1.20 <a href="music/Cool One/120120.mp3">Cool One</a> 
+             <h5>11.23.20 <a href="music/Sir Duke/112320.mp3">Sir Duke</a> [<a href="https://genius.com/Stevie-wonder-sir-duke-lyrics">Stevie Wonder</a>]</h5>
              <h5>11.23.20 <a href="music/Ma And Pa/112320.mp3">Ma And Pa</a> [<a href="https://genius.com/Fishbone-ma-and-pa-lyrics">Fishbone</a>]</h5>
              <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">Bootsy Collins</a>]</h5>
              <h5>08.11.20 <a href="music/Natural Mystic/081120.mp3">Natural Mystic</a> [<a href="https://genius.com/Bob-marley-and-the-wailers-natural-mystic-lyrics">Bob Marley</a>]</h5>
