Added other artwork section

--- a/other.html
+++ b/other.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Other - WK</title>
     <link rel="stylesheet" href="style.css">
+  
   </head>
   <nav>
     <a href="index.html"><-</a>
@@ -14,17 +15,26 @@
   &nbsp;
   <body>
     <h1><mark>OTHER</mark></h1>
-        <br>
-         <p><strong><h5>We just be getting</h5>
-         Silly in this.<br>
-         <small>(in this boot)</small> </mark></strong></p>
-        <br>
-           at some point I plan on putting like visual artworks here but first I have to find them all
-            </p>
+    <br>
+    <p>
+        <strong><h5>We just be getting</h5>
+        Silly in this.<br>
+        <small>(in this boot)</small> </mark></strong></p>
+        <br> this is where all the cool visual artworks and things go some by me and some by friends too
+    </p>
+    <br><p><strong><i>The Most Beautiful Time of the Day</i></strong> -WK</p>
+    <figure>
+        <img src="image/artwork/thebeautifultimeofday.png" alt="The Most Beautiful Time of the Day" style="width:900px;height:500px;">
+    </figure>
 
+    <br><p><strong><i>A creature of few brain cells</i></strong> -The Drummer</p>
+    <figure>
+        <img src="image/artwork/lowintelligencecreature.jpg" alt="Low Intelligence Creature" style="width:900px;height:350px;">
+    </figure>
 
-
-    <script src="index.js"></script>
-<br>
+    <br><p><strong><i>Mental Illinois</i></strong> -WK</p>
+    <figure>
+        <img src="image/artwork/mentalillinois.jpg" alt="Mental Illinois" style="width:500px;height:500px;">
+    </figure>
   </body>
 </html>
