Various Changes, Added more gallery and songs and added extra bio stuff

--- a/Irfan.html
+++ b/Irfan.html
@@ -19,8 +19,8 @@
         <br>
              <h4 style="color:orange;">2021</h>
             <p>
-                <h5>3.27.21 <a href="music/My Song 156/032721.wav">Respect The Elders</a></h5>
-                i refuse to publish to streaming services. except this one.
+                <h5>06.01.21 <a href="music/Respect The Elders/060121.mp3">Respect The Elders</a></h5>
+                this is on streaming services (unfortunately)
                  </p>
 
         <script src="index.js"></script>
