--- a/chron.html
+++ b/chron.html
@@ -15,14 +15,16 @@
   <body>
     <h1><i>Chron</i></h1>
         <br>
-         <p><strong><h5>a <mark>chronological</mark> collection of every audio file on this website,</h5>
-            the difference between this page and the others is that the others only catalog released songs.
-            <br><mark>Progress:</mark> ~50% of all songs
+         <p><strong><h5>a <mark>chronological</mark> archive of everything I've ever recorded,</h5>
+            (that I still have [which is still too much])            
+            
             <br>
-    <br><h3>Discdawgraphy</h3><br>
-             <h4 style="color:orange;">2025</h>
+    <br><h3>Discdawgraphy</h3>
+            <mark>Progress:</mark> this is about half of them I'd say<br>
+             <br><h4 style="color:orange;">2025</h>
             <p>
-
+            <h5>05.04.25 <a href="music/Sad Cat/050425.wav">Sad Cat</a></h5>
+            I made this for a video phoebe made which will eventually go in the trees section
             </p>
 
      <br>
@@ -140,8 +142,13 @@
         <br>
              <h4 style="color:orange;">2021</h>
             <p>
+
+                <h5>06.01.21 <a href="music/Respect The Elders/060121.mp3">Respect The Elders</a></h5>
+                this is on streaming services (unfortunately)
                 <h5>05.08.21 <a href="music/Respect The Elders/050821.mp3">Respect The Elders</a></h5>
                 <h5>05.08.21 <a href="music/F2ght/050821.mp3">F2ght</a></h5>
+                <h5>04.22.21 <a href="music/Location Tag Was A Mistake/042221.mp3">Location Tag was a Mistake</a></h5>
+                <h5>04.14.21 <a href="music/Trying To Fuck Megatron/041421.mp3">Trying to Fuck Megatron</a></h5>
                 <h5>04.05.21 <a href="music/Cave Song/040521.mp3">Cave Song</a></h5>
                 <h5>3.27.21 <a href="music/My Song 156/032721.wav">My Song 156</a></h5>
                 <h5>3.27.21 <a href="music/07/032721.wav">07</a></h5>
@@ -159,6 +166,7 @@
              <h5>11.23.20 <a href="music/Sir Duke/112320.mp3">Sir Duke</a> [<a href="https://genius.com/Stevie-wonder-sir-duke-lyrics">Stevie Wonder</a>]</h5>
              <h5>11.23.20 <a href="music/Ma And Pa/112320.mp3">Ma And Pa</a> [<a href="https://genius.com/Fishbone-ma-and-pa-lyrics">Fishbone</a>]</h5>
              <h5>11.22.20 <a href="music/I'd Rather Be With You/112220.mp3">I'd Rather Be With You</a> [<a href="https://genius.com/Bootsys-rubber-band-id-rather-be-with-you-lyrics">Bootsy Collins</a>]</h5>
+                <h5>09.14.20 <a href="music/Lofi Is Lazy/091420.mp3">Lofi Is Lazy</a></h5>
              <h5>08.11.20 <a href="music/Natural Mystic/081120.mp3">Natural Mystic</a> [<a href="https://genius.com/Bob-marley-and-the-wailers-natural-mystic-lyrics">Bob Marley</a>]</h5>
              <h5>08.09.20 <a href="music/V2/080920.mp3">V2</a></h5>
              <h5>08.09.20 <a href="music/Ants/080920.mp3">Ants! [beepbox]</a></h5>
@@ -177,9 +185,12 @@
              <h4 style="color:orange;">2019</h>
             <p>
                 <h5>8.5.19 <a href="music/3/080519.wav">3</a></h5>
+                "we have santigold at home" ass beat
                 <h5>8.5.19 <a href="music/Steady Ticking/080519.wav">Steady Ticking</a></h5>
                 <h5>8.5.19 <a href="music/Figures By The Door/080519.wav">Figures by the door</a></h5>
+                "mental sickness" -sniper team fortress 2
                 <h5>6.16.19 <a href="music/Banyon Tree/061619.wav">Banyon Tree</a></h5>
+                I miss my friend
                 <h5>6.16.19 <a href="music/Sowr With A Plan/061619.wav">Sowr With A Plan</a></h5>
                 <h5>6.16.19 <a href="music/Chilly Boy/061619.wav">Chilly Boy</a></h5>
                 <h5>6.8.19 <a href="music/Experimental/060819.wav">Experimental</a></h5>
