--- a/othersongs.html
+++ b/othersongs.html
@@ -16,9 +16,11 @@
   <body>
     <h1><i><mark>Other Songs</mark></i></h1><br>
          <p>
-            <strong>have you ever considered what you would do if you weren't you?
-            <br>
+            <strong>have you ever considered what you would do if you weren't you?<br>
+            what would you do if your hats did not fit?<br>
+            </strong>
             <br><h3>As <i><a href="KaunKarne.html">Kaun Karne</a></i></h3>
+            <br><h3>As <i><a href="KFC.html">Kentucky Fried Children</a></i></h3>
             <br><h3>As <i><a href="Irfan.html">Irfan</a></i></h3>
             <br><h3>As <i><a href="Sowrmango.html">Sowrmango</a></i></h3>
 
