--- a/KaunKarne.html
+++ b/KaunKarne.html
@@ -15,7 +15,7 @@
   <body>
     <h1><i>Kaun Karne</i></h1>
     <br>
-    <p><strong><h5>close enough, I guess</h5></strong></p>
+    <p><strong><h5>it's like me if I was stupid (me)</h5></strong></p>
         
     
         <br>
