Beepboxes 4 Completely Complete

--- a/KFC.html
+++ b/KFC.html
@@ -26,6 +26,10 @@
                 <h5>04.22.21 <a href="music/Location Tag Was A Mistake/042221.mp3">Location Tag was a Mistake</a></h5>
                 <h5>04.20.21 <a href="https://youtu.be/GCxGgcGzISc">Apr 20. 2021 </a></h5>
                 <h5>04.14.21 <a href="music/Trying To Fuck Megatron/041421.mp3">Trying to Fuck Megatron</a></h5>
+                <h5>04.01.21 <a href="music/The Drummer Has A Seizure/040121.mp3">The Drummer Has A Seizure</a></h5>
+
+
+
             </p>
 
         <br>
