more secret testing

--- a/chron.html
+++ b/chron.html
@@ -24,7 +24,7 @@
             <mark>Progress:</mark> this is about half of them I'd say<br>
              <br><h4 style="color:orange;">2025</h>
             <p>
-            <h5>NEVER <a href="music/Sad Cat/050425.wav">Secret Photo</a></h5>
+            <h5>NEVER <a href="music/secret things/secret photo.jpg">Secret Photo</a></h5>
             <h5>05.04.25 <a href="music/Sad Cat/050425.wav">Sad Cat</a></h5>
             I made this for a video phoebe made which will eventually go in the trees section
             <h5>04.03.25 <a href="music/Control/040325.mp3">Control</a></h5>
