Added AR FOR and other things, + testing the secret folder

--- a/chron.html
+++ b/chron.html
@@ -16,7 +16,8 @@
     <h1><i>Chron</i></h1>
         <br>
          <p><strong><h5>a <mark>chronological</mark> archive of everything I've ever recorded,</h5>
-            (that I still have [which is still too much])      
+            (that I still have [which is still too much])<br>
+            some of these are locked because they're actual like in progress things I'm going to release
             
             
             <br>
@@ -32,16 +33,25 @@
             <h5>03.23.25 <a href="music/Free/032325.mp3">Free</a></h5>
             <h5>03.02.25 <a href="music/Cigarettes/040225.mp3">Cigarettes</a></h5>
             <h5>03.20.25 <a href="music/Jack & Sarah/032025.mp3">Jack & Sarah</a></h5>
+            <h5>02.17.25 <a href="music/secret things/All For/021725.mp3">All For</a></h5>
             <h5>02.12.25 <a href="music/Cigarettes/021225.mp3">Cigarettes</a></h5>
             <h5>01.06.25 <a href="music/Offices/010625 2.mp3">Offices</a></h5>
-
-
+            <h5>01.06.25 <a href="music/All For/010625.mp3">All For [tape]</a></h5>
+            dicking around for fun
+            <h5>01.02.25 <a href="music/All For/010225 2.mp3" blank >All For [with phoebe + her vocals]</a></h5>
+            phoebe wrote new vocals but I liked the first ones more
+            <h5>01.02.25 <a href="music/All For/010225.mp3" blank >All For [with phoebe]</a></h5>
+            <h5>01.01.25 <a href="music/All For/010125.mp3" blank >All For </a></h5>
 
             </p>
 
      <br>
              <h4 style="color:orange;">2024</h>
             <p>
+
+            <h5>12.26.24 <a href="music/All For/122624.mp3" blank >All For [with phoebe]</a></h5>
+            thanks to phoebe for the lyrics
+            <h5>12.25.24 <a href="music/All For/122524.mp3" blank >All For [vocal test]</a></h5>
             <h5>12.19.24 <a href="music/All For/121924.mp3" blank >All For</a></h5>
             <h5>12.06.24 <a href="music/B2nes/120624.mp3" blank >B2ne Deo</a></h5>
             <h5>12.05.24 <a href="music/Keep Me Warm/120524.mp3" blank >Keep Me Warm/Truth</a></h5>
