Added songs from google drive

--- a/chron.html
+++ b/chron.html
@@ -26,6 +26,7 @@
              <br><h4 style="color:orange;">2025</h>
             <p>
             <h5>NEVER <a href="music/secret things/secret photo.jpg">Secret Photo</a></h5>
+            <h5>05.24.25 <a href="music/Rain/052425.wav">Rain</a></h5>
             <h5>05.04.25 <a href="music/Sad Cat/050425.wav">Sad Cat</a></h5>
             I made this for a video phoebe made which will eventually go in the trees section
             <h5>04.03.25 <a href="music/Control/040325.mp3">Control</a></h5>
@@ -33,7 +34,9 @@
             <h5>03.23.25 <a href="music/Free/032325.mp3">Free</a></h5>
             <h5>03.02.25 <a href="music/Cigarettes/040225.mp3">Cigarettes</a></h5>
             <h5>03.20.25 <a href="music/Jack & Sarah/032025.mp3">Jack & Sarah</a></h5>
-            <h5>02.17.25 <a href="music/secret things/All For/021725.mp3">All For</a></h5>
+            <h5>02.24.25 <a href="music/All For/022425.mp3">All For [alternate]</a></h5>
+            <h5>02.23.25 <a href="music/All For/022325.mp3">All For [alternate]</a></h5>
+            <h5>02.17.25 <a href="music/secret things/All For/021725.mp3">All For [LOCKED]</a></h5>
             <h5>02.12.25 <a href="music/Cigarettes/021225.mp3">Cigarettes</a></h5>
             <h5>01.06.25 <a href="music/Offices/010625 2.mp3">Offices</a></h5>
             <h5>01.06.25 <a href="music/All For/010625.mp3">All For [tape]</a></h5>
@@ -102,7 +105,16 @@
                 <h5>05.27.23 <a href="music/Untitled/052723.mp3" blank >Untitled</a></h5>
                 <h5>05.26.23 <a href="music/Forest/052623.mp3" blank >Forest</a></h5>
                 <h5>05.03.23 <a href="music/covers/A Cruel Angel's Thesis/050323.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
+                <h5>03.26.23 <a href="music/Down/032623.mp3" blank >Down</a></h5>
+                <h5>03.26.23 <a href="music/Chills/032623.mp3" blank >Chills</a></h5>
+                <h5>03.26.23 <a href="music/Hands/032623.mp3" blank >Hands</a></h5>
+                <h5>03.26.23 <a href="music/Chill/032623.mp3" blank >Chill</a></h5>
+                <h5>03.26.23 <a href="music/Time/032623.mp3" blank >Time</a></h5>
+                <h5>03.05.23 <a href="music/Beginning/030523.mp3" blank >Beginning</a></h5>
                 <h5>02.14.23 <a href="music/Death/021423.mp3" blank >Death</a></h5>
+                <h5>02.07.23 <a href="music/Alone/020723.mp3" blank >Alone</a></h5>
+                <h5>02.07.23 <a href="music/Gronk/020723.mp3" blank >Gronk</a></h5>
+                <h5>02.07.23 <a href="music/Hope/020723.mp3" blank >Hope</a></h5>
                 <h5>01.06.23 <a href="music/Oskar's Shitass Beepbox Song/010623 2.mp3" blank >Oskar's Shitass Beepbox Song</a></h5>
                 he called it a shitass song so I can call it that too
             </p>
@@ -117,6 +129,7 @@
                 <h5>12.04.22 <a href="music/Carnival/120422.mp3">Carnival</a> </h5>
                 <h5>12.04.22 <a href="music/covers/A Cruel Angel's Thesis/120422.mp3">A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
                 <h5>11.27.22 <a href="music/Christmas Song/112722.mp3">Christmas Song</a></h5>
+                <h5>11.24.22 <a href="music/Ocean/112422.mp3">Ocean</a></h5>
                 <h5>11.24.22 <a href="music/Christmas Song/112422.mp3">Chorus Chords</a></h5>
                 <h5>11.20.22 <a href="music/Carnival/112022.mp3">Carnival</a></h5>
                 <h5>11.20.22 <a href="music/Ocean/112022.mp3">Ocean</a></h5>
@@ -160,12 +173,14 @@
                 <h5>09.04.22 <a href="music/Low Batteries Are Better/090422.mp3">Low Batteries Are Better</a></h5>
                 <h5>09.03.22 <a href="music/Free/090322.mp3">Free</a></h5>
                 <h5>??.??.22 <a href="music/All For/date unknown.mp3">All For</a></h5>
+                <h5>08.28.22 <a href="music/Death/082822.mp3">Death</a></h5>
                 <h5>08.26.22 <a href="music/Summer/082622.mp3">Summer</a></h5>
                 <h5>08.26.22 <a href="music/All For/082622.mp3">All For</a></h5>
                 <h5>08.24.22 <a href="music/All For/082422.mp3">All For</a></h5>
                 <h5>08.24.22 <a href="music/Menu/082422.mp3">Menu</a></h5>
                 <h5>08.23.22 <a href="music/All For/082322.mp3">All For</a></h5>
                 <h5>08.23.22 <a href="music/KAIT/082322.mp3">K.A.I.T</a></h5>
+                <h5>08.22.22 <a href="music/Consolidate/082222.mp3">Consolidate</a></h5>
                 <h5>08.22.22 <a href="music/Life/082222.mp3">Life</a></h5>
                 <h5>08.20.22 <a href="music/Low Batteries Are Better/082022.mp3">Low Batteries Are Better</a></h5>
                 <h5>08.19.22 <a href="music/Low Batteries Are Better/081922.mp3">Low Batteries Are Better</a></h5>
@@ -174,6 +189,7 @@
                 <h5>08.12.22 <a href="music/The End/081222.mp3">The End</a></h5>
                 <h5>08.12.22 <a href="music/Desk/081222.mp3">Desk</a></h5>
                 <h5>08.11.22 <a href="music/B2nes/081122.mp3">B2nes</a></h5>
+                <h5>08.08.22 <a href="music/Afternoon/080822 2.mp3">Afternoon</a></h5>
                 <h5>08.08.22 <a href="music/Jazzy/080822 2.mp3">Jazzy</a></h5>
                 <h5>08.08.22 <a href="music/Jazzy/080822.mp3">Jazzy</a></h5>
                 <h5>08.07.22 <a href="music/Carnival/080722.mp3">Carnival</a></h5>
@@ -199,6 +215,7 @@
                 <h5>06.26.22 <a href="music/F2ght/062622.mp3">F2ght </a> </h5>
                 <h5>06.19.22 <a href="music/covers/The Motor Booty Affair/061922.mp3">The Motor-Booty Affair </a> [<a href="https://genius.com/Parliament-the-motor-booty-affair-lyrics" blank >Parliament-Funkadelic</a>]</h5>
                 the world is not ready to discuss how underappreciated this song is
+                <h5>06.08.22 <a href="music/Keyz N Bells/060822.mp3">Keyz N Bells </a> </h5>
                 <h5>05.23.22 <a href="music/Menuselect/052322.mp3">Menuselect </a> </h5>
                 <h5>05.21.22 <a href="music/Jazze/052122.mp3">Jazze </a> </h5>
                 <h5>05.21.22 <a href="music/covers/Groovier/052122.mp3">Groovier </a> [<a href="https://genius.com/Dilated-peoples-worst-comes-to-worst-lyrics" blank >Dialated Peoples</a>]</h5>
@@ -218,7 +235,8 @@
         <br>
              <h4 style="color:orange;">2021</h>
             <p>
-
+                <h5>10.12.21 <a href="music/Break It/101221.mp3">Break It</a></h5>
+                if you figure out what this sampled you are also not going to heaven
                 <h5>06.01.21 <a href="music/Respect The Elders/060121.mp3">Respect The Elders</a></h5>
                 this is on streaming services (unfortunately)
                 <h5>05.08.21 <a href="music/Respect The Elders/050821.mp3">Respect The Elders</a></h5>
