removed "other songs" page

--- a/chron.html
+++ b/chron.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <nav>
-    <a href="othersongs.html"><-</a>
+    <a href="music.html"><-</a>
 
   </nav>
   &nbsp;
@@ -17,7 +17,7 @@
         <br>
          <p><strong><h5>a <mark>chronological</mark> archive of everything I've ever recorded,</h5>
             (that I still have [which is still too much])<br>
-            some of these are locked because they're actual like in progress things I'm going to release
+            some of these are locked because they're actual like in progress things I'm going to release in those upcoming things
             
             
             <br>
