--- a/music.html
+++ b/music.html
@@ -24,9 +24,8 @@
                 <br><strong><mark>upcoming</mark></strong> wren kennison [album]
                 <br>
                 <iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2841881476/size=large/bgcol=ffffff/linkcol=7137dc/tracklist=false/transparent=true/" seamless><a href="https://wrenkennison.bandcamp.com/album/eye-balls-and-windows">eye balls and windows by wren kennison</a></iframe>       
-                <br><a href="othersongs.html">other songs</a>
             </p>
-
+            <br><a href="chron.html">CHRON / DEMOS</a>
 
 
     <script src="index.js"></script>
