Added KK audio files

--- a/chron.html
+++ b/chron.html
@@ -15,10 +15,8 @@
   <body>
     <h1><i>Chron</i></h1>
         <br>
-         <p><strong><h5>a <mark>chronological</mark> archive of everything I've ever recorded,</h5>
-            (that I still have [which is still too much])<br>
-            some of these are locked because they're actual like in progress things I'm going to release in those upcoming things
-            
+         <p><strong><h5>a <mark>chronological</mark> archive of literally everything I've ever recorded,</h5>
+            there is zero quality control here so don't expect much
             
             <br>
     <br><h3>Discdawgraphy</h3>
