Restructued the stuff AGAIN

--- a/about.html
+++ b/about.html
@@ -20,6 +20,24 @@
                 <img src="image/logoinverted.jpg" alt="Photo of ME"
               </figure>
     <p>very, very, very shy.</p>
+    <br>
+    <h3><mark>Why</mark> does this website exist?</h3>
+        <ul>
+                 <li>
+                    <strong>I need to access my songs</strong>
+                    <ul>
+                    <li>I have like a billion recordings and they're all split between 5 differenct machines and 4 different platforms. <br>this is the end-all be-all fuck-all repository for everything musical I have ever created.</li>
+                    <li>it come with eggroll</li>
+                    </ul>
+                 </li>     
+                 
+                <li><strong>I want people to hear my songs but I also don't</strong>
+                    <ul>
+                    <li>by creating the most user-unfriendly experience possible, the only people who get to hear my music<br> are the cool people who like me already and are willing to dig through this horrible site. Bill Wurtz pioneered <br>this technique and so I've just copied his tactic.</li>
+                    </ul>
+                </li>
+          
+        </ul>
     <a href="contact.html">contact</a>
 
 
