--- a/chron.html
+++ b/chron.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <nav>
-    <a href="music.html"><-</a>
+    <a href="thingsdirectory.html"><-</a>
 
   </nav>
   &nbsp;
@@ -16,9 +16,22 @@
     <h1><i>Chron</i></h1>
         <br>
          <p><strong><h5>a <mark>chronological</mark> archive of literally everything I've ever recorded,</h5>
-            there is zero quality control here so don't expect much
+            there is zero quality control here so don't expect much<br> some tracks are locked because I'm going to give them an actual release</strong>
             
-            <br>
+            <br><br>
+
+         <details>
+       <summary>
+         notes to self about timestamps
+       </summary>
+       <p>
+       - Acoustic Guitar demos listed in the first half of 2024 have inaccurate dates, as I uploaded them in batches, at least a month after recording (and with 'mountains' possibly over a year (!!!!!))
+       <br>- some beepbox demos are't here but only ones that are straight duplicates of others. They're accurate down to the <i>millisecond</i> so if something's weird it's because you grabbed an old project and re-saved it
+       <br>- TBFB tracks & friends [Hope-Down] were recorded around a month before the upload dates but I don't care since the release date is more important anyways
+       </p>
+    </details>
+    <strong>
+
     <br><h3>Discdawgraphy</h3>
             <mark>Progress:</mark> this is about half of them I'd say<br>
              <br><h4 style="color:orange;">2025</h>
@@ -47,7 +60,7 @@
             </p>
 
      <br>
-             <h4 style="color:orange;">2024</h>
+             <h4 style="color:orange;">2024</h4>
             <p>
 
             <h5>12.26.24 <a href="music/All For/122624.mp3" blank >All For [with phoebe]</a></h5>
@@ -80,17 +93,46 @@
             <h5>06.27.24 <a href="music/Control/062724.mp3">Control</a></h5>
             <h5>06.15.24 <a href="music/B2nes/061524.mp3">B2nes</a></h5>
             <h5>06.14.24 <a href="music/covers/Go Your Own Way/061424.mp3">Go Your Own Way</a> [<a href="https://genius.com/Fleetwood-mac-go-your-own-way-lyrics" blank >Fleetwood Mac</a>]</h5>
+            <h5>06.09.24 <a href="music/covers/Where Do My Bluebird Fly/060924.mp3">Where Do My Bluebird Fly?</a> [<a href="https://genius.com/The-tallest-man-on-earth-where-do-my-bluebird-fly-lyrics" blank >The Tallest Man On Earth</a>]</h5>
             <h5>06.07.24 <a href="music/covers/Holiday Road/060724.mp3">Holiday Road</a> [<a href="https://genius.com/Lindsey-buckingham-holiday-road-lyrics" blank >Lindsey Buckingham</a>]</h5>
             i livestreamed TF2 for 18 hours listening to this on loop and only had a slight emotional breakdown
+            <h5>06.04.24 <a href="music/I See Nothing/060424.mp3">I See Nothing</a> </h5>
+            <h5>06.04.24 <a href="music/Forlorn 442/060424.mp3">Forlorn 442</a> </h5>
+            <h5>05.29.24 <a href="music/Gun In Pocket/052924.mp3">Gun In Pocket</a></h5>
+            <h5>05.27.24 <a href="music/Songbird/052724.mp3">Songbird</a></h5>
             <h5>05.25.24 <a href="music/Untitled/052524.mp3">Untitled</a></h5>
+            <h5>05.19.24 <a href="music/Get/051924.mp3">Get</a></h5>
             <h5>05.17.24 <a href="music/Forest/051724.mp3">Forest</a></h5>
             <h5>05.13.24 <a href="music/Untitled/051324.mp3">Untitled</a></h5>
             <h5>05.08.24 <a href="music/Untitled/050824.mp3">Untitled</a></h5>
+            <h5>05.07.24 <a href="music/Songbird/050724.mp3">Songbird</a></h5>
+            <h5>05.07.24 <a href="music/Churchbells/050724.mp3">Hurt [churchbells]</a></h5>
+            <h5>05.02.24 <a href="music/Mephistopheles/050224.mp3">Mephistopheles</a></h5>
+            <h5>05.02.24 <a href="music/Gun In Pocket/050224.mp3">lEpsius [gun in pocket]</a></h5>
+            <h5>04.28.24 <a href="music/Names/042824.mp3">Names</a> </h5>
             <h5>04.26.24 <a href="music/covers/Pure Imagination/042624.mp3">Pure Imagination</a> [<a href="https://genius.com/Gene-wilder-pure-imagination-lyrics" blank >Gene Wilder</a>]</h5>
+            <h5>04.21.24 <a href="music/Nothing/042124.mp3">Nothing</a> </h5>
+            <h5>04.21.24 <a href="music/Gun In Pocket/042124.mp3">Modified Blood [Gun In Pocket]</a> </h5>
+            <h5>04.21.24 <a href="music/Impressionable/042124.mp3">Impressionable</a> </h5>
             <h5>04.14.24 <a href="music/Untitled/041424.mp3">Untitled</a></h5>
+            <h5>04.13.24 <a href="music/His Legal Middle Name Is Wanna Fuck/041324.mp3">His Legal Middle Name Is "Wanna Fuck"</a></h5>
+            <h5>04.13.24 <a href="music/Songbird/041324.mp3">Songbird [weird backing track thingy]</a></h5>
+            <h5>04.13.24 <a href="music/Songbird/041324 take four.mp3">Songbird [take four]</a></h5>
+            <h5>04.13.24 <a href="music/Songbird/041324 take three.mp3">Songbird [take three]</a></h5>
+            <h5>04.13.24 <a href="music/Pretend/041324.mp3">Pretend</a></h5>
+            <h5>04.13.24 <a href="music/Mountains/041324.mp3">Mountains</a></h5>
+            stole the lyrics for together walts
             <h5>04.11.24 <a href="music/covers/Go Your Own Way/041124.mp3">Go Your Own Way</a> [<a href="https://genius.com/Fleetwood-mac-go-your-own-way-lyrics" blank >Fleetwood Mac</a>]</h5>
-
-
+            <h5>04.09.24 <a href="music/Songbird/040924 2.mp3">Songbird [take 2]</a></h5>
+            <h5>04.09.24 <a href="music/Songbird/040924.mp3">Songbird</a></h5>
+            <h5>04.09.24 <a href="music/People Come People Go/040924.mp3">People Come People Go</a></h5>
+            <h5>04.09.24 <a href="music/Room Fire/040924.mp3">Untitled Bass Demo [Room Fire]</a></h5>
+            <h5>04.09.24 <a href="music/Gun In Pocket/040924.mp3">Freya Sploinky Riff [Gun In Pocket]</a></h5>
+            i wrote the guitar riff in exchange for her painting my soap dispenser. I ended up keeping it though, perhaps this is a legal offence
+            <h5>04.09.24 <a href="music/Bugs/040924 2.mp3">Bugs [ver 2]</a></h5>
+            immediately after finishing hours of work on 'bugs' I erased the project file and had to recreate it from scratch
+            <h5>04.09.24 <a href="music/Bugs/040924.mp3">Bugs [ver 1]</a></h5>
+            
 
             </p>
 
@@ -99,9 +141,15 @@
             <p>
                 <h5>08.08.23 <a href="music/covers/A Cruel Angel's Thesis/080823.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
                 <h5>07.24.23 <a href="music/Untitled/072423.mp3" blank >Untitled</a></h5>
+                <h5>05.29.24 <a href="music/Gnomecore/gnomecore 3.mp3">Gnomecore [part 3]</a></h5>
+                <h5>05.29.24 <a href="music/Together Waltz/gnomecore 2.mp3">Gnomecore [part 2] / Togetherwaltz</a></h5>
+                stole melody from 'life' which was in turn stolen by togetherwaltz
+                <h5>05.29.24 <a href="music/Gnomecore/gnomecore 1.mp3">Gnomecore [part 1]</a></h5>
                 <h5>05.27.23 <a href="music/Nitwit/052723.mp3" blank >Nitwit</a></h5>
                 <h5>05.27.23 <a href="music/Untitled/052723.mp3" blank >Untitled</a></h5>
                 <h5>05.26.23 <a href="music/Forest/052623.mp3" blank >Forest</a></h5>
+                <h5>05.12.23 <a href="music/P iano/051223.mp3" blank >P iano</a> </h5>
+                steals melody bits from 'Mountains' and 'Life'
                 <h5>05.03.23 <a href="music/covers/A Cruel Angel's Thesis/050323.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
                 <h5>03.26.23 <a href="music/Down/032623.mp3" blank >Down</a></h5>
                 <h5>03.26.23 <a href="music/Chills/032623.mp3" blank >Chills</a></h5>
@@ -109,6 +157,27 @@
                 <h5>03.26.23 <a href="music/Chill/032623.mp3" blank >Chill</a></h5>
                 <h5>03.26.23 <a href="music/Time/032623.mp3" blank >Time</a></h5>
                 <h5>03.05.23 <a href="music/Beginning/030523.mp3" blank >Beginning</a></h5>
+                <h5>03.26.23 <a href="music/Interlude/032623.mp3" blank >Interlude</a></h5>
+                <h5>03.26.23 <a href="music/Koe/032623.mp3" blank >Koe</a></h5>
+                <h5>03.26.23 <a href="music/Thomp/032623.mp3" blank >Thomp</a></h5>
+                <h5>03.26.23 <a href="music/Test/032623.mp3" blank >Test</a></h5>
+                <h5>03.26.23 <a href="music/I/032623.mp3" blank >I</a></h5>
+                <h5>03.25.23 <a href="music/Fonke/032523.mp3" blank >Fonke</a></h5>
+                <h5>03.25.23 <a href="music/covers/Fly/032523.mp3" blank >Fly</a>  [<a href="https://genius.com/Bill-wurtz-movie-star-lyrics" blank >Sample - Bill Wurtz</a>]</h5>
+                <h5>03.10.23 <a href="music/Copyfraud/031023.mp3" blank >Copyfraud</a>  [<a href="https://genius.com/Bill-wurtz-im-scared-lyrics" blank >Sample - Bill Wurtz</a>]</h5>
+                <h5>03.10.23 <a href="music/Contradiction/031023.mp3" blank >Contradiction</a></h5>
+                can't for the life of me remember what songs this samples
+                <h5>03.10.23 <a href="music/Bridge/031023.mp3" blank >Bridge</a></h5>
+
+
+
+
+                <h5>03.09.23 <a href="music/Death/030923.mp3" blank >Death</a></h5>
+                <h5>03.09.23 <a href="music/The End/030923.mp3" blank >The End</a></h5>
+                <h5>03.09.23 <a href="music/Low Batteries Are Better/030923.mp3" blank >Low Batteries Are Better</a></h5>
+                <h5>03.09.23 <a href="music/Jazzy/030923.mp3" blank >Jazzy</a></h5>
+                <h5>03.09.23 <a href="music/Moon Man/030923.mp3" blank >Moon Man</a></h5>
+                <h5>03.09.23 <a href="music/Life/030923.mp3" blank >Life</a></h5>
                 <h5>02.14.23 <a href="music/Death/021423.mp3" blank >Death</a></h5>
                 <h5>02.07.23 <a href="music/Alone/020723.mp3" blank >Alone</a></h5>
                 <h5>02.07.23 <a href="music/Gronk/020723.mp3" blank >Gronk</a></h5>
@@ -208,7 +277,7 @@
                 <h5>07.19.22 <a href="music/covers/Coffin Nails/071922.mp3">Coffin Nails</a> [<a href="https://genius.com/Mf-doom-coffin-nails-lyrics" blank >MF DOOM</a>]</h5>
                 <h5>07.18.22 <a href="music/Hampy/071822.mp3">Hampy</a></h5>
                 <h5>07.11.22 <a href="music/Untitled/071122.mp3">Untitled</a></h5>
-                <h5>06.23.22 <a href="music/Life/062322.mp3">Life </a> </h5>
+                <h5>06.23.22 <a id="LIFE062322" href="music/Life/062322.mp3">Life </a> </h5>
                 <h5>06.22.22 <a href="music/Bruhm/062222.mp3">Bruhm </a> </h5>
                 <h5>06.26.22 <a href="music/F2ght/062622.mp3">F2ght </a> </h5>
                 <h5>06.19.22 <a href="music/covers/The Motor Booty Affair/061922.mp3">The Motor-Booty Affair </a> [<a href="https://genius.com/Parliament-the-motor-booty-affair-lyrics" blank >Parliament-Funkadelic</a>]</h5>
