--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
         <br>
-    <p><strong>Hi and welcome to my site. feel free to browse my <a href="music.html">things</a>, or just look at the <a color=black href="other.html" blank >trees</a>.</strong></p>
+    <p><strong>Hi and welcome to my site. feel free to browse my <a href="thingsdirectory.html">things</a>, or just look at the <a color=black href="other.html" blank >trees</a>.</strong></p>
     <script src="index.js"></script>
 <br>
 <a href="siteNotes.html">About This Site</a>
