--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <nav>
-    <a href="index.html"><-</a>
+    <a href="thingsdirectory.html"><-</a>
 
   </nav>
   &nbsp;
@@ -25,7 +25,6 @@
                 <br>
                 <iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2841881476/size=large/bgcol=ffffff/linkcol=7137dc/tracklist=false/transparent=true/" seamless><a href="https://wrenkennison.bandcamp.com/album/eye-balls-and-windows">eye balls and windows by wren kennison</a></iframe>       
             </p>
-            <br><a href="chron.html">CHRON / DEMOS</a>
 
 
     <script src="index.js"></script>
