--- a/othersongs.html
+++ b/othersongs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <nav>
-    <a href="music.html"><-</a>
+    <a href="thingsdirectory.html"><-</a>
 
   </nav>
   &nbsp;
@@ -16,10 +16,7 @@
   <body>
     <h1><i><mark>Other Songs</mark></i></h1><br>
          <p>
-            <strong>have you ever considered what you would do if you weren't you?<br>
-            what would you do if your hats did not fit?<br>
-
-            <br><a href="chron.html">CHRON / DEMOS</a>
+            <strong> what would you do if your hats did not fit?<br></strong>
           </p>
 
 
